--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,7 @@
 					<!-- begin blog-in  -->
 					<div class="blog-in">
 						<!-- begin blog-list -->
-						<ul class="blog-list">
+						<ul class="blog-list blog-list-r">
 							<!-- begin blog-item -->
 							<li>
 								<div class="row">
@@ -364,7 +364,8 @@
 				<!-- end blog-wrap -->
 
 				<!-- begin blog__aside  -->
-				<div class="blog__aside">
+				<div class="blog-aside">
+
 					<!-- begin form-subscribe -->
 					<div class="form-subscribe">
 						<h3>Подписка на рассылку</h3>
@@ -386,8 +387,8 @@
 					</div>
 					<!-- end widget-vk -->
 
-					<!-- begin blog__news  -->
-					<div class="blog__news">
+					<!-- begin blog-news  -->
+					<div class="blog-news">
 						<h3>Популярные новости</h3>
 						<ul>
 							<li><a href="#"><i class="icon-all-more-right-viollet"></i>Новая новость заголовок...</a></li>
@@ -398,14 +399,14 @@
 							<li><a href="#"><i class="icon-all-more-right-viollet"></i>Новая новость заголовок...</a></li>
 						</ul>
 					</div>
-					<!-- end blog__news -->
+					<!-- end blog-news -->
 
-					<!-- begin blog__tags  -->
-					<div class="blog__tags">
+					<!-- begin blog-tags  -->
+					<div class="blog-tags">
 						<h3>Метки</h3>
 						<p><a href="#">Wespoo</a> <a href="#">акция</a> <a href="#">безопасность</a> <a href="#">видео</a> <a href="#">интервью</a> <a href="#">гороскоп</a> <a href="#">игра</a> <a href="#">идеи</a> <a href="#">Wespoo</a> <a href="#">акция</a> <a href="#">безопасность</a> <a href="#">видео</a> <a href="#">интервью</a> <a href="#">идеи</a> <a href="#">игра</a> <a href="#">гороскоп</a> <a href="#">игра</a> <a href="#">идеи</a> <a href="#">Wespoo</a> <a href="#">акция</a> <a href="#">безопасность</a> <a href="#">видео</a> <a href="#">интервью</a> <a href="#">гороскоп</a> <a href="#">игра</a> <a href="#">идеи</a> <a href="#">Wespoo</a> <a href="#">акция</a></p>
 					</div>
-					<!-- end blog__tags -->
+					<!-- end blog-tags -->
 				</div>
 				<!-- end blog__aside -->
 			</div>
