--- a/commercial_services.html
+++ b/commercial_services.html
@@ -4,7 +4,7 @@
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/png">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Vespoo</title>
+	<title>Wespoo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/bundle.min.css">
 	<link rel="stylesheet" href="css/orange.css">
@@ -196,7 +196,7 @@
 						
 						<div class="area-form">
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Выберите одну или несколько услуг</option>
 									<option value="Рубрика 1">Одна</option>
 									<option value="Рубрика 2">Несколько</option>
@@ -205,7 +205,7 @@
 								<i class="icon-success"></i>
 							</div>
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Выберите область</option>
 									<option value="Рубрика 1">Киевская</option>
 									<option value="Рубрика 2">Одесская</option>
@@ -215,7 +215,7 @@
 								<i class="icon-success"></i>
 							</div>
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Выберите способ оплаты</option>
 									<option value="Рубрика 1">Вебмани</option>
 									<option value="Рубрика 2">Належный платеж</option>
@@ -224,7 +224,7 @@
 								<i class="icon-success"></i>
 							</div>
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Выберите рубрику</option>
 									<option value="Рубрика 1">Одна</option>
 									<option value="Рубрика 2">Несколько</option>
@@ -249,7 +249,7 @@
 				<div class="row">
 					<div class="logo">
 						<a href="#">
-							<img src="img/logo-2.png" alt="Vespoo">
+							<img src="img/logo-2.png" alt="Wespoo">
 						</a>
 					</div>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam totam rem aperiam totam</p>
