--- a/contact_us.html
+++ b/contact_us.html
@@ -176,7 +176,7 @@
 								<!-- begin field  -->
 								<div class="field">
 									<div id="errorCategory">
-										<select data-validation="required" data-validation-event="change" data-validation-error-msg="Выберите тему" data-validation-error-msg-container="#errorCategory">
+										<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Выберите тему" data-validation-error-msg-container="#errorCategory">
 											<option value="">Выберите тему *</option>
 											<option value="Тема 1">Тема 1</option>
 											<option value="Тема 2">Тема 2</option>
