--- a/payment.html
+++ b/payment.html
@@ -157,7 +157,7 @@
 									<p>Топ-обьявление</p>
 								</div>
 								<div class="field field-select">
-									<select>
+									<select class="selecters">
 										<option value="1 день">1 день</option>
 										<option value="2 дня">2 дня</option>
 										<option value="3 дня">3 дня</option>
@@ -181,7 +181,7 @@
 									<p>Выделение цветом</p>
 								</div>
 								<div class="field field-select">
-									<select>
+									<select class="selecters">
 										<option value="1 день">1 день</option>
 										<option value="2 дня">2 дня</option>
 										<option value="3 дня">3 дня</option>
@@ -205,7 +205,7 @@
 									<p>Срочное обьявление</p>
 								</div>
 								<div class="field field-select">
-									<select>
+									<select class="selecters">
 										<option value="1 день">1 день</option>
 										<option value="2 дня">2 дня</option>
 										<option value="3 дня">3 дня</option>
@@ -229,7 +229,7 @@
 									<p>Поднятие в верх списка</p>
 								</div>
 								<div class="field field-select">
-									<select>
+									<select class="selecters">
 										<option value="1 день">1 день</option>
 										<option value="2 дня">2 дня</option>
 										<option value="3 дня">3 дня</option>
