--- a/profile_1.html
+++ b/profile_1.html
@@ -179,7 +179,7 @@
 										<fieldset>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select  class="selecters">
 													<option value="">Выбрать область</option>
 													<option value="Киевская область">Киевская область</option>
 													<option value="Донецкая область">Донецкая область</option>
@@ -187,7 +187,7 @@
 											</div>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select  class="selecters">
 													<option value="">Выбрать город</option>
 													<option value="Киев">Киев</option>
 													<option value="Донецк">Донецк</option>
