--- a/profile_3.html
+++ b/profile_3.html
@@ -146,7 +146,7 @@
 						<b>Транспорт</b>
 						<div class="area-form">
 							<div class="area-form-in" >
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Выбрать другую рубрику</option>
 									<option value="Рубрика 1">Рубрика 1</option>
 									<option value="Рубрика 2">Рубрика 2</option>
@@ -164,7 +164,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">audi</option>
 									<option value="Рубрика 1">audi</option>
 									<option value="Рубрика 2">nissan</option>
@@ -180,7 +180,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Пикап</option>
 									<option value="Рубрика 1">Купе</option>
 									<option value="Рубрика 2">Кабриолет</option>
@@ -196,7 +196,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">2016</option>
 									<option value="Рубрика 1">2015</option>
 									<option value="Рубрика 2">2014</option>
@@ -212,7 +212,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">Механическая</option>
 									<option value="Рубрика 1">Автоматическая</option>
 									<option value="Рубрика 2">Другая</option>
@@ -271,7 +271,7 @@
 							<p>Цена <input type="text"> </p> 
 
 								<div class="area-form-in area-for-cash" id="errorCategory">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCategory">
 									<option value="">грн.</option>
 									<option value="Рубрика 1">евро.</option>
 									<option value="Рубрика 2">дол.</option>
@@ -371,7 +371,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorRegion">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorRegion">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorRegion">
 									<option value="">Укажите область</option>
 									<option value="Киевская область">Киевская область</option>
 									<option value="Черкасская область">Черкасская область</option>
@@ -387,7 +387,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorCity">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCity">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorCity">
 									<option value="">Укажите город</option>
 									<option value="Киев">Киев</option>
 									<option value="Черкассы">Черкассы</option>
@@ -460,7 +460,7 @@
 						</div>
 						<div class="area-form">
 							<div class="area-form-in" id="errorType">
-								<select data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorType">
+								<select class="selecters" data-validation="required" data-validation-event="change" data-validation-error-msg="Поле обязательное для заполнения" data-validation-error-msg-container="#errorType">
 									<option value="">Укажите тип</option>
 									<option value="Частное">Частное</option>
 									<option value="Бизнес">Бизнес</option>
@@ -562,7 +562,7 @@
 										<fieldset>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select class="selecters">
 													<option value="">Выбрать область</option>
 													<option value="Киевская область">Киевская область</option>
 													<option value="Донецкая область">Донецкая область</option>
@@ -570,7 +570,7 @@
 											</div>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select class="selecters">
 													<option value="">Выбрать город</option>
 													<option value="Киев">Киев</option>
 													<option value="Донецк">Донецк</option>
