--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
-
+	<link rel="stylesheet" href="css/adaptive.css">
+	<meta name="viewport" content="width=1000px">
+<!-- <link rel="alternate" media="only screen and (max-width: 640px)"
+      href="http://m.example.com/page-1" > -->
 </head>
 <body>
 	<!--Begin Arrow-top-->
