--- a/profile_2.html
+++ b/profile_2.html
@@ -220,7 +220,7 @@
 										<fieldset>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select class="selecters">
 													<option value="">Выбрать область</option>
 													<option value="Киевская область">Киевская область</option>
 													<option value="Донецкая область">Донецкая область</option>
@@ -228,7 +228,7 @@
 											</div>
 											<!-- begin field -->
 											<div class="field">
-												<select>
+												<select class="selecters">
 													<option value="">Выбрать город</option>
 													<option value="Киев">Киев</option>
 													<option value="Донецк">Донецк</option>
