--- a/my orders.html
+++ b/my orders.html
@@ -96,8 +96,8 @@
 					<div id="profile-2" class="profile-msg is-empty">
 						<div class="profile-msg-top">
 							<ul class="msg-status">
-								<li class="is-active"><a href="#">активные (1234)</a></li>
-								<li><a href="#">Отложенные (1233)</a></li>
+								<li class="is-active"><a href="#"  ad-in="ad-one">активные (1234)</a></li>
+								<li><a href="#" ad-in="ad-two">Отложенные (1233)</a></li>
 							</ul>
 							<form action="#" class="search-msg">
 								<fieldset>
@@ -127,7 +127,7 @@
 								<li>Cумма</li>
 							</ul>
 
-						<div class="ad-is">
+						<div class="ad-is" id="ad-one">
 							<div class="ad-is-block">
 								<div class="ad-is-data active-data ">
 									<div class="icheckbox_square-orange" style="position: relative;">
@@ -259,6 +259,114 @@
 								<span>15 500 грн.</span>
 							</div>
 						</div>
+
+
+						<div class="ad-is" id="ad-two">
+							<div class="ad-is-block pending">
+								<div class="ad-is-data active-data ">
+									<div class="icheckbox_square-orange" style="position: relative;">
+										<input type="checkbox" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">
+										<ins class="iCheck-helper" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">	
+										</ins>
+									</div>
+									<span class='data-ad'>23.09.2015</span>
+
+								</div>
+								<img src="img/content/news-img.jpg" alt="">
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a class="ad-is-text" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Посмотреть</a> 
+								<a href="#" class="ad-is-edit">Детали заказа</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+								<button>активировать</button>
+							</div>
+							<div class="ad-is-block pending">
+								<div class="ad-is-data active-data ">
+									<div class="icheckbox_square-orange" style="position: relative;">
+										<input type="checkbox" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">
+										<ins class="iCheck-helper" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">	
+										</ins>
+									</div>
+									<span class='data-ad'>23.09.2015</span>
+
+								</div>
+								<img src="img/content/news-img.jpg" alt="">
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a class="ad-is-text" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Посмотреть</a> 
+								<a href="#" class="ad-is-edit">Детали заказа</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+								<button>активировать</button>
+							</div>
+							<div class="ad-is-block pending">
+								<div class="ad-is-data active-data ">
+									<div class="icheckbox_square-orange" style="position: relative;">
+										<input type="checkbox" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">
+										<ins class="iCheck-helper" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">	
+										</ins>
+									</div>
+									<span class='data-ad'>23.09.2015</span>
+
+								</div>
+								<img src="img/content/news-img.jpg" alt="">
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a class="ad-is-text" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Посмотреть</a> 
+								<a href="#" class="ad-is-edit">Детали заказа</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+								<button>активировать</button>
+							</div>
+							<div class="ad-is-block pending">
+								<div class="ad-is-data active-data ">
+									<div class="icheckbox_square-orange" style="position: relative;">
+										<input type="checkbox" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">
+										<ins class="iCheck-helper" style="position: absolute; top: -20%; left: -200px; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);">	
+										</ins>
+									</div>
+									<span class='data-ad'>23.09.2015</span>
+
+								</div>
+								<img src="img/content/news-img.jpg" alt="">
+								<a class="ad-is-name" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a class="ad-is-text" href="#">
+									Лучшая покупка для дома
+									Лучшая покупка для дома
+								</a>
+								<a href="#" class="ad-is-edit">Посмотреть</a> 
+								<a href="#" class="ad-is-edit">Детали заказа</a>
+								<span class="ad-is-numb"> 4</span>
+								<span>15 500 грн.</span>
+								<button>активировать</button>
+							</div>	
+						</div>
+			
+
+
+
 					</div>
 					</div>
 					<div id="profile-1" class="profile-advert is-empty order">
