--- a/advert_page.html
+++ b/advert_page.html
@@ -330,7 +330,7 @@
 												<p><input class="form-input" type="file" name="photo" multiple accept="image/*,image/jpeg">
 												<p class="field-info">Типы файлов, которые принимаются: jpg, jpeg, png, doc, pdf, gif, zip, rar, tar, html, swf, txt, xls, docx, xlsx, odt<span>Максимальный размер файла 2 МБ</span></p>
 											</div>
-											<button class="submit-btn">Отправить</button>
+											<input type="submit" class="submit-btn" value='Отправить'>
 										</fieldset>
 									</form>
 								</div>
