--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 				<form action="#" id="searchForm" class="form-search">
 					<div class="form-group location col-xs-4 no-padding">
 						<input type="text" class="form-control field search city-search" id="cityCurrent" placeholder="Город, область...">
-						<input type="hidden" id='icCurrent' class="icCurrent-reg" value="">
-						<input type="hidden" id='icCurrent' class="icCurrent-city" value="">
+						<input type="hidden" id='icCurrent' value="">
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4 no-padding">
