--- a/advert_page.html
+++ b/advert_page.html
@@ -152,8 +152,8 @@
 			</div>
 			<!-- end banner-inner__top -->
 
-			<!-- begin advert-wrap  -->
-			<div class="advert-wrap">
+			<!-- begin notice-wrap  -->
+			<div class="notice-wrap">
 				<!-- begin advert-in  -->
 				<div class="advert-in col-xs-8">
 					<h2 class="advert-title">плащ палатка солдатская</h2>
@@ -461,7 +461,7 @@
 				</div>
 				<!-- end advert-aside -->
 			</div>
-			<!-- end advert-wrap -->
+			<!-- end notice-wrap -->
 
 			<!-- begin advert-post  -->
 			<div class="advert-post">
