--- a/my orders.html
+++ b/my orders.html
@@ -59,21 +59,21 @@
 		<!-- begin body-branding  -->
 		<div class="body-branding">
 			<!-- begin banner  -->
-			<div class="block-links-1">
+			<div class="banner-1">
 				<a href="#"><img src="img/banners/Banner-160x600.jpg" alt="banner"></a>
 				<button class="close-banner">x</button>
 			</div>
 			<!-- end banner -->
 
 			<!-- begin service-1  -->
-			<div class="block-links-2">
+			<div class="service-1">
 				<a href="#"><img src="img/banners/service-1.jpg" alt="service"></a>
 				<button class="close-banner">x</button>
 			</div>
 			<!-- end service-1 -->
 
 			<!-- begin service-2  -->
-			<div class="block-links-3">
+			<div class="service-2">
 				<a href="#"><img src="img/banners/service-1.jpg" alt="service"></a>
 				<button class="close-banner">x</button>
 			</div>
