--- a/advert_page.html
+++ b/advert_page.html
@@ -152,7 +152,7 @@
 			</div>
 			<!-- end banner-inner__top -->
 
-			<!-- begin notice-wrap  -->
+			<!-- begin notice-wrap-wrap  -->
 			<div class="notice-wrap">
 				<!-- begin advert-in  -->
 				<div class="advert-in col-xs-8">
@@ -461,7 +461,7 @@
 				</div>
 				<!-- end advert-aside -->
 			</div>
-			<!-- end notice-wrap -->
+			<!-- end notice-wrap-wrap -->
 
 			<!-- begin advert-post  -->
 			<div class="advert-post">
