--- a/advertisment is inactive.html
+++ b/advertisment is inactive.html
@@ -99,8 +99,8 @@
 			<div class="inactive-message">
 				<p>Обьявление не активно, в связи с превышением лимита активных обьявлений в этой категории. <a href="">Нажмите здесь</a>, чтобы активировать свое обьявление.</p>
 			</div>
-			<!-- begin advert-wrap  -->
-			<div class="advert-wrap">
+			<!-- begin notice-wrap  -->
+			<div class="notice-wrap">
 				<!-- begin advert-in  -->
 				<div class="advert-in">
 					<h2 class="advert-title">ПРОДАМ СЕКРЕТНЫЙ ТОВАР ПРОДАМ СЕКРЕТНЫЙ ТОВАР ПРОДАМ!!!  </h2>
@@ -408,7 +408,7 @@
 				</div>
 				<!-- end advert-aside -->
 			</div>
-			<!-- end advert-wrap -->
+			<!-- end notice-wrap -->
 
 			<!-- begin advert-post  -->
 			<div class="advert-post">
