--- a/advert_list.html
+++ b/advert_list.html
@@ -58,7 +58,7 @@
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4 no-padding">
-					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
+					   		<input type="text" class="form-control field search notice-search" placeholder="8 350 432 объявлений">
 					</div>
 				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
 				</form>
@@ -546,15 +546,15 @@
 								<!-- <li class="chaked-search">
 									
 									<div class="area-form">
-										<input type="checkbox" name="advert-check" data-validation="required">
+										<input type="checkbox" name="notice-check" data-validation="required">
 										<p>Искать в заголовке и описании</p>						
 									</div>
 									<div class="area-form">
-										<input type="checkbox" name="advert-check" data-validation="required">
+										<input type="checkbox" name="notice-check" data-validation="required">
 										<p>Только с фото</p>						
 									</div>
 									<div class="area-form">
-										<input type="checkbox" name="advert-check" data-validation="required">
+										<input type="checkbox" name="notice-check" data-validation="required">
 										<p>Только с доставкой</p>						
 									</div>
 				 			
@@ -615,7 +615,7 @@
 						<!-- begin advert -->
 						<li class="post-list-top">
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 									<div class="stickers-list">
 									<div class="stockers-top-list">	
 										<div class="vip-purple-two"><p>top</p></div>
@@ -672,7 +672,7 @@
 						<!-- begin advert -->
 						<li class="post-list-vip">
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 								<div class="stickers-list">
 									<div class="stockers-top-list">	</div>
 									<div class="stic-red"><div class="stic-fire"></div></div>
@@ -726,7 +726,7 @@
 						<!-- begin advert -->
 						<li>
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 									<div class="stickers-list">
 									<div class="stockers-top-list">	</div>
 									<div class="stic-green"><div class="stic-fire"></div></div>
