--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4 no-padding">
-					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
+					   		<input type="text" class="form-control field search notice-search" placeholder="8 350 432 объявлений">
 					</div>
 				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
 
@@ -184,8 +184,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="advert-socials">
-										<ul class="advert-socials-list">
+									<div class="notice-socials">
+										<ul class="notice-socials-list">
 											<li><a href="#"><i class="icon-social-twitter"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-fb"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-vk"></i>35</a></li>
@@ -212,8 +212,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="advert-socials">
-										<ul class="advert-socials-list">
+									<div class="notice-socials">
+										<ul class="notice-socials-list">
 											<li><a href="#"><i class="icon-social-twitter"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-fb"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-vk"></i>35</a></li>
@@ -228,7 +228,7 @@
 							<li>
 								<div class="row">
 									<div class="blog-img">
-										<img src="img/content/advert-photo.jpg" alt="blog-img">
+										<img src="img/content/notice-photo.jpg" alt="blog-img">
 									</div>
 									<div class="blog-inner">
 										<h2 class="blog-title">15 вариантов хранения нужных вещей на обратной стороне дверей</h2>
@@ -240,8 +240,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="advert-socials">
-										<ul class="advert-socials-list">
+									<div class="notice-socials">
+										<ul class="notice-socials-list">
 											<li><a href="#"><i class="icon-social-twitter"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-fb"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-vk"></i>35</a></li>
@@ -256,7 +256,7 @@
 							<li>
 								<div class="row">
 									<div class="blog-img">
-										<img src="img/content/advert-photo.jpg" alt="blog-img">
+										<img src="img/content/notice-photo.jpg" alt="blog-img">
 									</div>
 									<div class="blog-inner">
 										<h2 class="blog-title">15 вариантов хранения нужных вещей на обратной стороне дверей</h2>
@@ -268,8 +268,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="advert-socials">
-										<ul class="advert-socials-list">
+									<div class="notice-socials">
+										<ul class="notice-socials-list">
 											<li><a href="#"><i class="icon-social-twitter"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-fb"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-vk"></i>35</a></li>
@@ -296,8 +296,8 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="advert-socials">
-										<ul class="advert-socials-list">
+									<div class="notice-socials">
+										<ul class="notice-socials-list">
 											<li><a href="#"><i class="icon-social-twitter"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-fb"></i>35</a></li>
 											<li><a href="#"><i class="icon-social-vk"></i>35</a></li>
