--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4 no-padding">
-					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
+					   		<input type="text" class="form-control field search notice-search" placeholder="8 350 432 объявлений">
 					</div>
 				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
 
