--- a/advert_list_top.html
+++ b/advert_list_top.html
@@ -57,7 +57,7 @@
 							<a href="#" class="clear-input reset icon-all-close"></a>
 					</div>
 					<div class="form-group col-xs-4 no-padding">
-					   		<input type="text" class="form-control field search advert-search" placeholder="8 350 432 объявлений">
+					   		<input type="text" class="form-control field search notice-search" placeholder="8 350 432 объявлений">
 					</div>
 				 		<button type="submit" class="col-xs-3 btn btn-default field submit">Поиск</button>
 
@@ -565,7 +565,7 @@
 							</div>
 							<!-- end button -->
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 							</a>
 							<div class="advertlist-item">
 								<div class="advertlist-item-title">
@@ -601,7 +601,7 @@
 						<!-- begin advert -->
 						<li>
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 							</a>
 							<div class="advertlist-item">
 								<div class="advertlist-item-title">
@@ -637,7 +637,7 @@
 						<!-- begin advert -->
 						<li>
 							<a href="#" class="advertlist-img">
-								<img src="img/content/advert-photo.jpg" alt="photo">
+								<img src="img/content/notice-photo.jpg" alt="photo">
 							</a>
 							<div class="advertlist-item">
 								<div class="advertlist-item-title">
