--- a/advert_page.html
+++ b/advert_page.html
@@ -473,8 +473,8 @@
 							<img src="img/content/news-img.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
-							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
 							<p class="notice-post-date">8 августа</p>
@@ -486,8 +486,8 @@
 							<img src="img/content/test-175.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
-							<p class="notice-post-desc">Короткое описание товара...</p>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div class="notice-post-desc">Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
 							<p class="notice-post-date">8 августа</p>
@@ -499,8 +499,8 @@
 							<img src="img/content/image-for-test.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
-							<p class="notice-post-desc">Короткое описание товара Короткое описание</p>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div class="notice-post-desc">Короткое описание товара Короткое описание</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
 							<p class="notice-post-date">8 августа</p>
@@ -512,8 +512,8 @@
 							<img src="img/content/notice-photo.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
-							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
 							<p class="notice-post-date">8 августа</p>
@@ -536,7 +536,7 @@
 							<img src="img/content/news-img.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -549,7 +549,7 @@
 							<img src="img/content/test-175.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -562,7 +562,7 @@
 							<img src="img/content/image-for-test.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -575,7 +575,7 @@
 							<img src="img/content/notice-photo.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<a href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
