--- a/advert_page.html
+++ b/advert_page.html
@@ -473,7 +473,8 @@
 							<img src="img/content/news-img.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div href="#" class="notice-post-title">
+								<a href="#">Лучшая покупка для дома</div></a>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -486,7 +487,8 @@
 							<img src="img/content/test-175.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div href="#" class="notice-post-title">
+								<a href="#">Лучшая покупка для дома</div></a>
 							<div class="notice-post-desc">Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -499,7 +501,8 @@
 							<img src="img/content/image-for-test.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div href="#" class="notice-post-title">
+								<a href="#">Лучшая покупка для дома</div></a>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -512,7 +515,8 @@
 							<img src="img/content/notice-photo.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</div>
+							<div href="#" class="notice-post-title">
+								<a href="#">Лучшая покупка для дома</div></a>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -536,7 +540,8 @@
 							<img src="img/content/news-img.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -549,7 +554,8 @@
 							<img src="img/content/test-175.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -562,7 +568,8 @@
 							<img src="img/content/image-for-test.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -575,7 +582,8 @@
 							<img src="img/content/notice-photo.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">Лучшая покупка для дома</a>
+							<div href="#" class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</a>
 							<p class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</p>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
