--- a/advert_page.html
+++ b/advert_page.html
@@ -473,8 +473,8 @@
 							<img src="img/content/news-img.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">
-								<a href="#">Лучшая покупка для дома</div></a>
+							<div class="notice-post-title">
+								<a href="#">Лучшая покупка для дома</a></div>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -487,8 +487,8 @@
 							<img src="img/content/test-175.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">
-								<a href="#">Лучшая покупка для дома</div></a>
+							<div class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</div>
 							<div class="notice-post-desc">Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -501,8 +501,8 @@
 							<img src="img/content/image-for-test.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">
-								<a href="#">Лучшая покупка для дома</div></a>
+							<div class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</div>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -515,8 +515,8 @@
 							<img src="img/content/notice-photo.jpg" alt="photo">
 						</a>
 						<div class="notice-post-in">
-							<div href="#" class="notice-post-title">
-								<a href="#">Лучшая покупка для дома</div></a>
+							<div class="notice-post-title">
+								<a href="#"></a>Лучшая покупка для дома</div>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
