--- a/advert_page.html
+++ b/advert_page.html
@@ -488,7 +488,7 @@
 						</a>
 						<div class="notice-post-in">
 							<div class="notice-post-title">
-								<a href="#"></a>Лучшая покупка для дома</div>
+								<a href="#">Лучшая покупка для дома</a></div>
 							<div class="notice-post-desc">Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -502,7 +502,7 @@
 						</a>
 						<div class="notice-post-in">
 							<div class="notice-post-title">
-								<a href="#"></a>Лучшая покупка для дома</div>
+								<a href="#">Лучшая покупка для дома</a></div>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
@@ -516,7 +516,7 @@
 						</a>
 						<div class="notice-post-in">
 							<div class="notice-post-title">
-								<a href="#"></a>Лучшая покупка для дома</div>
+								<a href="#">Лучшая покупка для дома</a></div>
 							<div class="notice-post-desc">Короткое описание товара Короткое описание товара Короткое описание товара...</div>
 							<p class="notice-post-price">2000 грн.</p>
 							<p class="notice-post-loc">Киев</p>
